# mcp-repocache

./: .bandit  .bandit.yaml  .gitignore  .mypy.ini  .pre-commit-config.yml  .pylint.rc  .pyre_configuration.local  .safety-policy.ini  .safety-policy.yml  AGENTS.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  INSTALLATION.md  INSTALL_QUICK.md  LICENSE  QUICK_START.md  README.md  SAFETY_CONFIG.md  SYNCHRONIZATION_GUIDE.md  TESTING.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt  test_schema.py
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/: dependabot.yml
.github/workflows/: README.md  bandit.yml  ci-cd.yml  docs.yml  osv-scanner-pr.yml  osv-scanner.yml  pylint.yml  pyre.yml  security-scan.yml  typecheck.yml
docs/: 01-overview.md  02-architecture.md  03-modules.md  04-data-flow.md  05-setup.md  06-usage.md  07-api-reference.md  08-todo.md  Developer Decision-Making Framework.md  readme-rules.md
mcp/: git_fetcher.py  models.py  modules.py  semantic.py  server.py  storage.py
scripts/: index_docs.py  run_server.py  run_tests.py
tests/: conftest.py  test_config.py  test_error_handling.py  test_git_fetcher.py  test_index_docs.py  test_models.py  test_security.py  test_semantic.py  test_server.py  test_storage.py  test_version_handling.py
