[tool.poetry]
name = "mcp-repocache"
version = "0.1.0"
description = "MCP Repository Cache - Documentation aggregation and indexing system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "mcp"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
gitpython = "^3.1.40"
pydantic = "^2.5.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.12.0"
black = "^25.10.0"
flake8 = "^7.3.0"
httpx = "^0.28.1"  # For FastAPI test client
pylint = "^4.0.4"
safety = "^3.7.0"
bandit = "^1.9.2"
mypy = "^1.19.1"
ruff = "^0.14.10"
hypothesis = "^6.148.8"
pytest-benchmark = "^5.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
index-docs = "scripts.index_docs:main"
run-server = "scripts/run_server.py"
test = "pytest"
test-cov = "pytest --cov=mcp --cov=scripts --cov-report=html --cov-report=term"

[tool.safety]
# Safety configuration for dependency vulnerability scanning (YAML format preferred)
# Main configuration is in .safety-policy.yml
# This section provides fallback configuration for compatibility

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --disable-warnings --color=yes --durations=10 --ignore=data/raw --ignore=data/zim --ignore=data/sqlite --ignore=data/vectors"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow tests",
    "git: Tests that require git operations"
]
