[project]
name = "mcp"
version = "0.1.0"
description = "MCP Repository Cache - Documentation aggregation and indexing system"
authors = [
    { name = "Bradley Arlt", email = "bdarlt@gmail.com" },
]
readme = "README.md"
packages = [{include = "mcp"}]
license = "BSD-3-Clause"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
index-docs = "scripts.index_docs:main"
run-server = "scripts.run_server:main"
test = "pytest:main"
test-cov = "pytest:main --cov=mcp --cov=scripts --cov-report=html --cov-report=term"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
gitpython = "^3.1.46"
pydantic = "^2.5.0"
pyyaml = "^6.0.1"
pyrefly = "^0.46.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.12.0"
black = "^25.10.0"
flake8 = "^7.3.0"
httpx = "^0.28.1"  # For FastAPI test client
pylint = "^4.0.4"
safety = "^3.7.0"
bandit = "^1.9.2"
mypy = "^1.19.1"
ruff = "^0.14.10"
hypothesis = "^6.148.11"
pytest-benchmark = "^5.2.3"
pyrefly = "^0.46.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.safety]
# Safety configuration for dependency vulnerability scanning (YAML format preferred)
# Main configuration is in .safety-policy.yml
# This section provides fallback configuration for compatibility

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --disable-warnings --color=yes --durations=10 --ignore=data/raw --ignore=data/zim --ignore=data/sqlite --ignore=data/vectors"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "git: Tests that require git operations"
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"
